Fix to correct icon alignment to text, add radius border to experience cards, include font weight change to h1 text

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,11 @@ h2 {
   margin-bottom: 20px;
 }
 
+.icon-align {
+  vertical-align: middle;
+  font-size: 12px;
+}
+
 #outer-box {
   display: flex;
   max-width: 1440px;
@@ -175,6 +180,7 @@ h2 {
   background-color: #ffffff;
   box-shadow: 6px 2px 25px -9px #0000001a;
   margin: 20px;
+  border-radius: 10px;
 }
 
 .table-heading {
